# orders_project

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: django-ci.yml
accounts/: admin.py  apps.py
accounts/migrations/: 0001_initial.py  0002_delete_profile.py
config/: settings.py  urls.py
orders/: admin.py  forms.py  models.py  urls.py  views.py
orders/migrations/: 0001_initial.py
orders/tests/: test_forms.py  test_models.py  test_views.py
static/css/: base.css  buttons.css  cards.css  forms.css  icons.css  login.css  main.css  navbar.css  orders.css  status.css  variables.css
static/css/components/: buttons.css  cards.css  forms.css  icons.css  navbar.css  status.css
templates/: base.html
templates/components/: icon.html  navbar.html
templates/components/icons/: clear_filter.html  close.html  download.html  edit.html
templates/orders/: order_create.html  order_detail.html  orders_list.html
templates/registration/: login.html
